--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -121,18 +121,18 @@
 
     public Season Season { get; set; }
     public Race? NextRace { get; set; }
-    public List<League> Leagues { get; set; }
-    public List<Race> Races { get; set; }
-    public List<Result> Results { get; set; }
-    public List<Climate> Climates { get; set; }
-    public List<SeasonEngine> SeasonEngines { get; set; }
-    public List<SeasonTeam> SeasonTeams { get; set; }
-    public List<SeasonDriver> SeasonDrivers { get; set; }
-    public List<Engine> Engines { get; set; }
-    public List<Team> Teams { get; set; }
-    public List<Driver> Drivers { get; set; }
-    public List<Trait> Traits { get; set; }
-    public List<Manufacturer> Manufacturers { get; set; }
+    public List<League> Leagues { get; set; } = new();
+    public List<Race> Races { get; set; } = new();
+    public List<Result> Results { get; set; } = new();
+    public List<Climate> Climates { get; set; } = new();
+    public List<SeasonEngine> SeasonEngines { get; set; } = new();
+    public List<SeasonTeam> SeasonTeams { get; set; } = new();
+    public List<SeasonDriver> SeasonDrivers { get; set; } = new();
+    public List<Engine> Engines { get; set; } = new();
+    public List<Team> Teams { get; set; } = new();
+    public List<Driver> Drivers { get; set; } = new();
+    public List<Trait> Traits { get; set; } = new();
+    public List<Manufacturer> Manufacturers { get; set; } = new();
 
     SimConfig config;
 
