Can succesfully load the new raceweek just as it is possible to advance the practice session

--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -1,23 +1,9 @@
-﻿<MudPaper id="raceweek-container">
+﻿<MudPaper>
     <MudGrid Spacing="1">
         <MudItem xs="12">
             <MudPaper MinHeight="60px" Class="pa-2">
-                <MudStack Row="true" Spacing="0" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                    @*<MudStack Row="true" Spacing="0" AlignItems="AlignItems.Center" Style="width:20%">
-                        @if (Model.Race.State == State.Active)
-                        {
-                            <MudText Typo="Typo.body2" Color="Color.Secondary">@($"FP{nextPractice}")</MudText>
-                            <MudDivider Vertical="true" Class="mx-2" />
-                        }
-
-                        <MudText Typo="Typo.body2" Color="Color.Secondary">@nextSession</MudText>
-                    </MudStack>*@
-
+                <MudStack Row="true" Spacing="0" Justify="Justify.Center" AlignItems="AlignItems.Center">
                     <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
-
-                    <div class="d-flex flex-row-reverse align-center" style="width:20%">
-                        <ScreenshotButton TargetId="raceweek-container" />
-                    </div>
                 </MudStack>
             </MudPaper>
         </MudItem>
@@ -31,26 +17,40 @@
                     <MudListItemExtended T="string" SecondaryText="Country">
                         <CountryNamedFlag Code="@Model.Race.Track.Country" Size="ElementSize.Normal" Reverse="true" />
                     </MudListItemExtended>
-                    <MudListItemExtended T="string" Text="@Model.Race.Climate.Terminology" SecondaryText="Weather">
+                    <MudListItemExtended T="string" Text="@Model.Climate.Terminology" SecondaryText="Weather">
                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
-                            <MudIcon Icon="@Model.Race.Climate.Icon" />
-                            <MudText>@Model.Race.Climate.Terminology</MudText>
+                            <MudIcon Icon="@Model.Climate.Icon" />
+                            <MudText>@Model.Climate.Terminology</MudText>
                         </MudStack>
                     </MudListItemExtended>
-                    <MudListItemExtended T="string" Text="@($"{Model.Race.Track.Length}km")" SecondaryText="Length" />
-                    <MudListItemExtended T="string" Text="@($"{NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")" SecondaryText="Laps" />
-                    <MudListItemExtended T="double" Text="@Model.Race.Track.AeroMod.ToString("F2")" SecondaryText="Aero modifier" />
-                    <MudListItemExtended T="double" Text="@Model.Race.Track.ChassisMod.ToString("F2")" SecondaryText="Chassis modifier" />
-                    <MudListItemExtended T="double" Text="@Model.Race.Track.PowerMod.ToString("F2")" SecondaryText="Powertrain modifier" />
-                    <MudListItemExtended T="double" Text="@Model.Race.Track.QualifyingMod.ToString("F2")" SecondaryText="Qualifying modifier" />
-                    <MudListItemExtended T="double" Text="@Model.Race.Track.DefenseMod.ToString("F2")" SecondaryText="Defense modifier" />
+                    <MudListItemExtended T="string"
+                        Text="@($"{Model.Race.Track.Length}km")"
+                        SecondaryText="Length" />
+                    <MudListItemExtended T="string"
+                        Text="@($"{NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")"
+                        SecondaryText="Laps" />
+                    <MudListItemExtended T="double"
+                        Text="@Model.Race.Track.AeroMod.ToString("F2")"
+                        SecondaryText="Aero modifier" />
+                    <MudListItemExtended T="double"
+                        Text="@Model.Race.Track.ChassisMod.ToString("F2")"
+                        SecondaryText="Chassis modifier" />
+                    <MudListItemExtended T="double"
+                        Text="@Model.Race.Track.PowerMod.ToString("F2")"
+                        SecondaryText="Powertrain modifier" />
+                    <MudListItemExtended T="double"
+                        Text="@Model.Race.Track.QualifyingMod.ToString("F2")"
+                        SecondaryText="Qualifying modifier" />
+                    <MudListItemExtended T="double"
+                        Text="@Model.Race.Track.DefenseMod.ToString("F2")"
+                        SecondaryText="Defense modifier" />
                 </MudListExtended>
 
-                @*@if (Model.TrackTraits?.Any() == true)
+                @if (TrackTraits.Any() == true)
                 {
-                    <MudText Typo="Typo.subtitle1">Circuit traits</MudText>
+                    <MudText Typo="Typo.subtitle1">Circuit Traits</MudText>
                     <MudList>
-                        @foreach (var trait in Model.TrackTraits)
+                        @foreach (var trait in TrackTraits)
                         {
                             <MudListItem>
                                 <MudStack Spacing="1">
@@ -61,7 +61,7 @@
                             </MudListItem>
                         }
                     </MudList>
-                }*@
+                }
             </MudPaper>
         </MudItem>
         <MudItem xs="6">
@@ -120,11 +120,11 @@
                             </SupplierDisplay>
                         </MudTd>
                         <MudTd>
-                            @*<MudLink OnClick="@(async () => await PickStrategy(context.ResultId))">
+                            <MudLink OnClick="@(async () => await HandleTyrePicker(context.ResultId))">
                                 <TyreElement Colour="@context.Tyre.Colour">
                                     @context.Tyre.Name.ElementAt(0)
                                 </TyreElement>
-                            </MudLink>*@
+                            </MudLink>
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
@@ -132,29 +132,9 @@
         </MudItem>
         <MudItem xs="3">
             <MudPaper Class="pa-4 mud-height-full">
-                <MudText Typo="Typo.h5">Navigators</MudText>
+                <MudText Typo="Typo.h5">???</MudText>
                 <MudDivider />
                 <MudText Typo="Typo.body2" Color="Color.Error" Class="mb-1">Wtf am I going to put here?</MudText>
-
-                @*<MudStack Spacing="1">
-                    <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
-                        @for (int i = 1; i <= Model.PracticeCompletedCount; i++)
-                        {
-                            int j = i;
-                            <MudButton FullWidth="true" OnClick="@(() => GoToPractice(j))" Class="overflow-hider">FP@(j)</MudButton>
-                        }
-
-                        @if (Model.Race.State != State.Advanced && Model.Race.State != State.Closed)
-                        {
-                            <MudButton FullWidth="true" OnClick="@(() => GoToPractice(nextPractice))" Class="overflow-hider">FP@(nextPractice)</MudButton>
-                        }
-                    </MudButtonGroup>
-                    <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Outlined" OnClick="GoToQualifying">Qualifying</MudButton>
-                    @if (Model.Race.State != State.Concept && Model.Race.State != State.Active)
-                    {
-                        <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Outlined" OnClick="GoToRace">Race</MudButton>
-                    }
-                </MudStack>*@
             </MudPaper>
         </MudItem>
     </MudGrid>
@@ -162,4 +142,12 @@
 
 @code {
     [CascadingParameter] public RaweCeekModel Model { get; set; }
+
+    [Parameter] public IEnumerable<Trait> TrackTraits { get; set; } = Enumerable.Empty<Trait>();
+    [Parameter] public EventCallback<long> OnOpenTyrePicker { get; set; }
+
+    public async Task HandleTyrePicker(long resultId)
+    {
+        await OnOpenTyrePicker.InvokeAsync(resultId);
+    }
 }
